--- a/PC/html/new/commentList.html
+++ b/PC/html/new/commentList.html
@@ -14,10 +14,10 @@
 <link rel="apple-touch-startup-image" href="/images/ico_app.png">
 
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:300,400,700|Titillium+Web:400,600&display=swap&subset=korean">
-<link rel="stylesheet" type="text/css" href="/pages/html/css/layout.css">
-<link rel="stylesheet" type="text/css" href="/pages/html/css/contents.css">
-<link rel="stylesheet" type="text/css" href="/pages/html/css/common.css">
-<link rel="stylesheet" type="text/css" href="/pages/html/css/common_v2.css">
+<link rel="stylesheet" type="text/css" href="../../html/css/layout.css">
+<link rel="stylesheet" type="text/css" href="../../html/css/contents.css">
+<link rel="stylesheet" type="text/css" href="../../html/css/common.css">
+<link rel="stylesheet" type="text/css" href="../../html/css/common_v2.css">
 
 <script type="text/javascript" src="/js/jquery-1.9.1.min.js?201906210101"></script>
 <script type="text/javascript" src="/scripts/common?201906210101"></script>
@@ -307,7 +307,7 @@ $(document).ready(function(){
                     <td>
                         <input  type="hidden" name="seq" value="195642" />
                         
-                            <a class="btn_type01_v2" href="javascript://" onclick="window.open('/pages/html/commentPopup.html', '', 'width=500,height=600');return false;">수정</a>
+                            <a class="btn_type01_v2" href="javascript://" onclick="window.open('../../html/commentPopup.html', '', 'width=500,height=600');return false;">수정</a>
                             <a class="btn_type05_v2 mgt5" href="#n" _onclick="deleteWithAjax('195642')">삭제</a>
                                             
                     </td>
