--- a/PC/html/new/funding_detail1.html
+++ b/PC/html/new/funding_detail1.html
@@ -566,9 +566,13 @@
 	                            	</div>
                             	</div>
                             	<div class="funding_progressbar_wrap mgt65">
-                            		<div></div>
+                            		<div class="funding_progressbar">
+                            			<div class="funding_bar" style="width:40%;">
+                            				
+                            			</div>
+                            		</div>
                             	</div>
-                            	<div class="funding_goal_price_wrap">
+                            	<div class="funding_goal_price_wrap mgt30">
                             		<dl class="funding_goal_price_type1">
                             			<dt>핫트딜 달성금액</dt>
                             			<dd>
@@ -589,7 +593,7 @@
                             		</dl>
                             	</div>
                             	<div class="funding_goal_text_wrap mgt30">
-                            		<div class="funding_goal_text">
+                            		<div class="funding_goal_text funding_icon1">
                             			<span>목표금액</span>
                             			<span class="only_english">2,256,700</span>
                             			<span>원이 달성되면, 상품 준비와 배송이 진행 됩니다.</span>	
