--- a/PC/html/new/funding_main.html
+++ b/PC/html/new/funding_main.html
@@ -501,9 +501,9 @@
 	                			<div class="text">핫트랙스와 펀딩이 함께 하는</div>
 	                			<div class="text_icon only_english">핫트딜</div>
 	                		</h3>
-	                		<div class="funding_desc_texts">
+	                		<div class="funding_desc_texts mgt20">
 	                			<p class="text">핫트딜 펀딩 참여 후 목표가 달성되면 상품이 최종 구매 완료 됩니다.</p>
-	                			<p class="text mgt5">펀딩(딜)이 성공적으로 종료되면 결제가 완료됩니다.</p>
+	                			<p class="text mgt10">펀딩(딜)이 성공적으로 종료되면 결제가 완료됩니다.</p>
 	                		</div>	
                 		</div>
                 		<div class="funding_process_wrap">
@@ -535,7 +535,7 @@
                 	<div></div>
 
                 	<!-- tab -->
-                	<div class="tab1 tab_wrap">
+                	<div class="tab1 tab_wrap mgt80">
                         <ul class="tab_list"> 
                             <li class="items"><a href="javascript:;" class="on"><span>핫트딜ING</span></a></li>
                             <li class="items"><a href="javascript:;"><span>배송준비 및 출발</span></a></li> 
