--- a/PC/html/new/@@template_cs.html
+++ b/PC/html/new/@@template_cs.html
@@ -115,13 +115,116 @@
                 <!-- 컨텐츠 -->
                 <div class="content orderandpay" id="content">
                     <!-- lnb -->
-                    <!-- 공통이라 이미지 처리 menu0.html에 있음 -->
+                    <!-- 201228 S : 작업부분 -->
                     <div class="lnb">                        
-                        <img src="../../images/new/@img_cs_lnb.png" alt=""> 
+                        <!-- 201228 작업부분 -->
+                        <!-- sub top -->
+                        <div class="page_location"> 
+                            <h2 class="title">
+                                <a href="javascript:;">고객센터</a>
+                            </h2>
+                        </div>
+                        <!-- //sub top -->
+                        <ul>
+                            <!-- <li>
+                                <a>FAQ 통합검색</a>
+                            </li> -->
+                            <li>
+                                <a>공지사항</a>
+                                <ul class="depth2">
+                                    <li>
+                                        <a href="/ht/help/listNotice">공지사항</a>
+                                    </li>
+                                    <li>
+                                        <a href="/ht/help/eventPrizeList">이벤트 당첨자</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a>주문 FAQ</a>
+                                <ul class="depth2">
+                                    <li>
+                                        <a href="/ht/help/faqListC0391">주문결제</a>
+                                    </li>
+                                    <li>
+                                        <a href="/ht/help/faqListC0392">배송</a>
+                                    </li>
+                                    <li>
+                                        <a href="/ht/help/faqListC0393">반품/교환/환불</a>
+                                    </li>
+                                    <li>
+                                        <a href="/ht/help/faqListC0394">세금계산서/증빙</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a>회원 FAQ</a>
+                                <ul class="depth2">
+                                    <li>
+                                        <a href="/ht/help/faqListC0401">회원정보</a>
+                                    </li>
+                                    <li>
+                                        <a href="/ht/help/faqListC0402">통합포인트/예치금/쿠폰</a>
+                                    </li><!-- 
+                                    <li>
+                                        <a href="/ht/help/faqListC0403">상품문의</a>
+                                    </li> -->
+                                    <li>
+                                        <a href="/ht/help/faqListC0404">이벤트</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a>기타 FAQ</a>
+                                <ul class="depth2">
+                                    <li>
+                                        <a href="/ht/help/faqListC0411">영업점</a>
+                                    </li>
+                                    <li>
+                                        <a href="/ht/help/faqListC0412">사이트이용/장애/기타</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a>문의사항</a>
+                                <ul class="depth2">
+                                    <li>
+                                        <a href="/ht/help/vendorInquiry">상품입점문의</a>
+                                    </li>
+                                    <li>
+                                        <a href="/ht/help/businessBuy">대량구매상담</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/ht/help/sosCounselMain">SOS상담</a>
+                            </li>
+                            <li>
+                                <a>서비스안내</a>
+                                <ul class="depth2">
+                                    <li>
+                                        <a href="/ht/help/memberShip">통합 멤버십</a>
+                                    </li>
+                                    <li>
+                                        <a href="/ht/help/savePointByOffBill">영수증 적립 서비스</a>
+                                    </li>
+                                    <li>
+                                        <a href="/ht/help/carvingService">각인 서비스</a>
+                                    </li>
+                                    <li>
+                                        <a href="/ht/help/packingService">포장 서비스</a>
+                                    </li>
+                                    <li>
+                                        <a href="/ht/help/cardInfo">제휴/할인 카드</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
                     </div>
+                    <!-- // 201228 E : 작업부분 -->
                     <!-- //lnb -->
                     <!-- sub contents -->
-                        <div class="sub_contents">
+                    <div class="sub_contents">
                             <!-- search -->
                             <h3 class="page_title mgt0">FAQ 통합검색</h3>
                             <div class="search_box02">
