--- a/MOBILE/html/new/cs_main.html
+++ b/MOBILE/html/new/cs_main.html
@@ -130,14 +130,14 @@
         </div>
         
         <!-- 201228 작업부분 -->
-        <div class="bbs_box mt60">
+        <!-- 210121 수정 -->
+        <div class="bbs_box mt60 customer_layer_contents">
             <!-- 201228 작업부분 -->
             <h4 class="only_english">FAQ</h4>
             <ul class="accordion">            
                 <li>
                     <a href="javascript://">
-                        <span>회원 등급 및 혜택이 어떻게 되나요?</span>
-                        <em>2019.04.26</em>
+                        <span>회원 등급 및 혜택이 어떻게 되나요?</span><!-- 210121 수정 -->
                     </a>
                     <div class="cont">
                         <div class="inner">
@@ -147,8 +147,7 @@
                 </li>           
                 <li>
                     <a href="javascript://">
-                        <span>회원 등급 및 혜택이 어떻게 되나요?</span>
-                        <em>2019.04.26</em>
+                        <span>회원 등급 및 혜택이 어떻게 되나요?</span><!-- 210121 수정 -->
                     </a>
                     <div class="cont">
                         <div class="inner">
@@ -158,8 +157,7 @@
                 </li>           
                 <li>
                     <a href="javascript://">
-                        <span>회원 등급 및 혜택이 어떻게 되나요?</span>
-                        <em>2019.04.26</em>
+                        <span>회원 등급 및 혜택이 어떻게 되나요?</span><!-- 210121 수정 -->
                     </a>
                     <div class="cont">
                         <div class="inner">
@@ -169,8 +167,7 @@
                 </li>           
                 <li>
                     <a href="javascript://">
-                        <span>회원 등급 및 혜택이 어떻게 되나요?</span>
-                        <em>2019.04.26</em>
+                        <span>회원 등급 및 혜택이 어떻게 되나요?</span><!-- 210121 수정 -->
                     </a>
                     <div class="cont">
                         <div class="inner">
