--- a/MOBILE/html/new/listone_pop.html
+++ b/MOBILE/html/new/listone_pop.html
@@ -390,52 +390,7 @@ function resetFrm(){
                 <!-- 레이어 펼치기 전 -->
                 <div id="layer" style="position:relative;width:100%;background-color:#fff;display:none;border:1px solid #2a2a2a;border-radius:5px;margin:10px 0;">
                 </div>
-                
-                <!-- 레이어 펼치고 난 후 아래 주석 풀어서 사용하세요 -->
-                <!-- <div id="layer" style="position: relative; width: 100%; background-color: rgb(255, 255, 255); border: 1px solid rgb(42, 42, 42); border-radius: 5px; margin: 10px 0px;">
-                    <div class="close">
-                        <a href="javascript:closeOrder();" class="thislayer_close">닫기
-                        </a>
-                        <div class="sub_contents">
-                            <div class="inner_pull_box">
-                                <div class="blank_box">주문하신 내역이 없습니다.</div>
-                                <table class="table_wrap t_c mt30">
-                                    <caption>주문내역 조회
-                                        <span>주문일, 주문번호, 상품명, 상품금액(배송금액), 배송업체, 처리상태</span>
-                                    </caption>
-                                    <colgroup>
-                                        <col width="17%">
-                                        <col width="17%">
-                                        <col width="17%">
-                                        <col width="17%">
-                                        <col width="16%">
-                                        <col width="16%">
-                                    </colgroup>
-                                    <tbody>
-                                        <tr>
-                                            <th>주문일</th>
-                                            <th>주문번호</th>
-                                            <th>상품명</th>
-                                            <th>상품금액<br>(배송금액)</th>
-                                            <th>배송업체</th>
-                                            <th>처리상태</th>
-                                        </tr>
-                                        <tr>
-                                            <td>a</td>
-                                            <td>a</td>
-                                            <td>a</td>
-                                            <td>a</td>
-                                            <td>a</td>
-                                            <td>a</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                                <div class="paging cs"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
+                <!-- 210121 수정 주석삭제 -->
 
                 <table class="table_wrap">
                     <caption>개인정보입력 <span>이름, 아이디, 핸드폰, 이메일</span></caption>
