--- a/MOBILE/html/new/popup_listFaq.html
+++ b/MOBILE/html/new/popup_listFaq.html
@@ -50,9 +50,8 @@
             <p class="text">핫트랙스에서 고객 여러분께 자주묻는 질문의 답변을 드립니다.</p>
             <ul class="accordion mt20">
                 <li>
-                    <a href="javascript://">
+                    <a href="javascript://" class="">
                         <span>뮤지컬 &lt;빅피쉬&gt; 초대 이벤트 당첨자 발표</span>
-                        <em>2019.10.28</em>
                     </a>
                     <div class="cont">
                         <div class="inner">
@@ -69,7 +68,6 @@
                 <li>
                     <a href="javascript://">
                         <span>뮤지컬 &lt;빅피쉬&gt; 초대 이벤트 당첨자 발표</span>
-                        <em>2019.10.28</em>
                     </a>
                     <div class="cont">
                         <div class="inner">
