--- a/PC/html/new/menu4_1.html
+++ b/PC/html/new/menu4_1.html
@@ -398,9 +398,8 @@ $(document).ready(function(){
                                 <!-- 201228 작업부분 -->
                                 <td colspan="2">
                                     <div class="txt">
-                                        <p><font color="#5d5d5d"><span style="font-family: Dotum,돋움;">영수증을 소지하고 계신경우 영업점 무인가입기에서 영수증 번호를 입력하면 후적립이 가능합니다.</span></font></p>
-                                        <p><font color="#5d5d5d"><span style="font-family: Dotum,돋움;">인터넷 교보문고 홈페이지에서도 가능합니다. </span></font></p>
-                                        <p><font color="#5d5d5d"><span style="font-family: Dotum,돋움;">(단, 구매일로부터 7일 이내 가능)</span></font></p>
+                                        <!-- 210121 수정 -->
+                                        영수증을 소지하고 계신경우 영업점 무인가입기에서 영수증 번호를 입력하면 후적립이 가능합니다.
                                     </div>
                                 </td>
                             </tr>
