--- a/PC/html/new/myEventList_blank.html
+++ b/PC/html/new/myEventList_blank.html
@@ -235,25 +235,11 @@
 				        </thead>
 				        <tbody>
 			                <tr>
-			                    <td>2019.04.05</td>
-			                    <td class="t_left"><a href="#n" title="새창에서 열림"><꿈꾸는 4월>  출석체크</a></td>
-			                    <td>
-			                        <!-- next-chance -->
-			                        <p>다음 기회에</p>
-			                    </td>
-			                    <td class="center">마감</td>
+			                    <td colspan="4">응모하신 이벤트가 없습니다.</td>
+			                    
 			                </tr>
 				        </tbody>
 				    </table>
-				    <!-- paging -->
-				    <div class="paging cs">
-				    	<a title="맨 처음 페이지로 이동" href="#n" class="first">처음</a>
-				        <ul>			            
-				            <li class="active"><a href="#n">1</a></li>
-				        </ul>
-                        <a title="맨 나중 페이지로 이동" href="/ht/help/listNotice?page=1" class="next02">나중</a>
-				    </div>
-				    <!-- //paging -->
                 </div>
                 <!-- //sub contents -->                
             </div>
