--- a/PC/html/new/record_video.html
+++ b/PC/html/new/record_video.html
@@ -278,8 +278,10 @@
                                     <ul id="newReleases">
                                         <li class="">
                                             <a href="javascript:;" title="SUNSET IN THE BLUE [180G LP] [다운로드 카드 한정반]">
-                                                <div class="thum">
+                                                <!-- 210121 수정 -->
+                                                <div class="thum d_day_txt">
                                                     <img src="http://image.kyobobook.co.kr/newimages/music/large/4835/2538475.jpg" alt="SUNSET IN THE BLUE [180G LP] [다운로드 카드 한정반]" />
+                                                    <span class="d_day">D-1</span>
                                                 </div>
                                             </a>
                                             <a href="javascript:;">
