--- a/PC/path_now.html
+++ b/PC/path_now.html
@@ -1367,7 +1367,7 @@ th.row-headers-background {
         <td class="s10">주문/배송조회</td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_1.html">./html/new/menu1_1.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderDelivery.html">./html/new/orderDelivery.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1378,7 +1378,7 @@ th.row-headers-background {
         <td class="s10">상품평작성팝업</td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/commentPopup.html">./html/new/commentPopup.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1389,7 +1389,7 @@ th.row-headers-background {
         <td class="s10">주문/배송 상세 내역</td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderDeliveryDetail.html">./html/new/orderDeliveryDetail.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1423,7 +1423,7 @@ th.row-headers-background {
         <td class="s10">주문취소/변경</td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderChange.html">./html/new/orderChange.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1434,7 +1434,7 @@ th.row-headers-background {
         <td class="s10">배송지변경팝업</td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/popupChangeDeliveryDestination.html">./html/new/popupChangeDeliveryDestination.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1446,7 +1446,7 @@ th.row-headers-background {
         <td class="s10">반품/교환신청</td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/returnExchange.html">./html/new/returnExchange.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1457,7 +1457,7 @@ th.row-headers-background {
         <td class="s10">반품/교환신청 상세</td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/returnExchange.html">./html/new/returnExchange.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1468,7 +1468,7 @@ th.row-headers-background {
         <td class="s10">반품/교환신청 상품조회팝업</td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/returnExchangeProduct.html">./html/new/returnExchangeProduct.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1515,7 +1515,7 @@ th.row-headers-background {
         <td class="s16">통합포인트</td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_1.html">./html/new/menu1_1.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/totsaved.html">./html/new/totsaved.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1526,7 +1526,7 @@ th.row-headers-background {
         <td class="s16">마일리지</td>
         <td class="s16">적립마일리지</td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/saved.html">./html/new/saved.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1537,7 +1537,7 @@ th.row-headers-background {
         <td class="s16">마일리지</td>
         <td class="s16">사용마일리지</td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/saved2.html">./html/new/saved2.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1549,7 +1549,7 @@ th.row-headers-background {
         <td class="s10">교보핫트랙스 온라인 예치금 내역</td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/deposit.html">./html/new/deposit.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1560,7 +1560,7 @@ th.row-headers-background {
         <td class="s16">핫트랙스 온라인 예치금</td>
         <td class="s10">환불신청내역</td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/deposit2.html">./html/new/deposit2.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1571,7 +1571,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s10">예치금환불신청팝업</td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/popupDeposit.html">./html/new/popupDeposit.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1583,7 +1583,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/coupon.html">./html/new/coupon.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1649,8 +1649,8 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
         <td class="s14"></td>
-        <td class="s16" dir="ltr" rowspan="7">쇼핑도우미</td>
-        <td class="s16"rowspan="2">상품 Q&amp;A</td>
+        <td class="s16" dir="ltr" rowspan="8">쇼핑도우미</td>
+        <td class="s16"rowspan="3">상품 Q&amp;A</td>
         <td class="s10">내역있음</td>
         <td class="s16"></td>
         <td class="s17"></td>
@@ -1663,6 +1663,17 @@ th.row-headers-background {
         <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
         <td class="s14"></td>
         <td class="s10">내역없음</td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/questionList_blank.html">./html/new/questionList_blank.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s10">상품Q&amp;A팝업</td>
         <td class="s16"></td>
         <td class="s17"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/questionList_blank.html">./html/new/questionList_blank.html</a></td>
