--- a/PC/html/new/menu0_result.html
+++ b/PC/html/new/menu0_result.html
@@ -329,7 +329,8 @@
                             <!-- search -->
                             <!-- BEST FAQ -->
                             <!-- 201228 : S 작업부분 -->
-                            <h3 class="s_title mgt80"> <span class="only_english">BEST FAQ</span><!-- <strong class="desc">고객님들께서 가장 많이 궁금해하시는 사항입니다.</strong> --></h3>
+                            <!-- 210121 수정 -->
+                            <h3 class="s_title mgt80"> <span class="only_english">통합검색 FAQ</span><!-- <strong class="desc">고객님들께서 가장 많이 궁금해하시는 사항입니다.</strong> --></h3>
                             <table class="bbs_list01">
                                 <caption></caption>
                                 <colgroup>
