--- a/PC/html/new/questionList.html
+++ b/PC/html/new/questionList.html
@@ -315,9 +315,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			                        <div class="txt">
 			                            <p class="question-content">안녕하세요.<br/>새 배터리, 기준 몇시간 사용 가능한가요?<br/></p>
 			                            
-			                                    <p class="answer bt_line mgt20 mgb30 pdt10"><strong class="">문의글 답변</strong></p>
-			                                    <p class="answer-content"><p>안녕하세요</p><p> 고객님.</p><p>핫트랙스 온라인몰 담당자&nbsp; 입니다.</p><p>&nbsp;</p><p>문의주신 상품은 지우는 버튼을 누를 때 배터리가 소모됩니다.</p><p>때문에 정확한 수치를 알려드리기는 어렵지만,&nbsp;몇 백번 이상 사용이 가능하십니다.</p><p>구매 시 참고 바랍니다.</p><p>&nbsp;</p><p>기타 문의사항이 있으시면 언제든지 상품 Q&amp;A로 재문의주시거나</p><p>1661-1112번으로 문의주시기 바랍니다.</p><p>행복한 하루 보내시길 바랍니다.</p><p>감사합니다.</p><p>&nbsp;</p><br/></p>
-			                                
+	                                    <p class="answer bt_line mgt20 mgb30 pdt10"><strong class="">문의글 답변</strong></p>
+	                                    <p class="answer-content"><p>안녕하세요</p><p> 고객님.</p><p>핫트랙스 온라인몰 담당자&nbsp; 입니다.</p><p>&nbsp;</p><p>문의주신 상품은 지우는 버튼을 누를 때 배터리가 소모됩니다.</p><p>때문에 정확한 수치를 알려드리기는 어렵지만,&nbsp;몇 백번 이상 사용이 가능하십니다.</p><p>구매 시 참고 바랍니다.</p><p>&nbsp;</p><p>기타 문의사항이 있으시면 언제든지 상품 Q&amp;A로 재문의주시거나</p><p>1661-1112번으로 문의주시기 바랍니다.</p><p>행복한 하루 보내시길 바랍니다.</p><p>감사합니다.</p><p>&nbsp;</p><br/></p>
+                                        <div class="modi_wrap">
+                                            <ul class="modi_list">
+                                                <li><a href="javascript:;" onclick="" class="bar">수정</a></li>
+                                                <li><a href="javascript:;">삭제</a></li>
+                                            </ul>                                            
+                                        </div>
 			                        </div>
 			                    </td>
 			                </tr>
