--- a/PC/html/new/menu6_1_01.html
+++ b/PC/html/new/menu6_1_01.html
@@ -648,6 +648,9 @@ $(document).ready(function(){
                                             </div>
                                         </td>         
                                     </tr>
+                                    <tr>
+                                        <td colspan="2">영업점 이용상담의 문의는 등록하신 <span class="point02">이메일 또는 전화번호로 회신</span>을 드리며,<BR><span class="point02">SOS상담에는 답변 내용이 등록 되지 않으니</span> 이점 양해 부탁 드립니다.</td>
+                                    </tr>
                                     <form name="vnoform" method="post">
                                         <!-- 인증결과 암호화 데이터 -->
                                         <input type="hidden" name="enc_data">
