--- a/PC/html/new/popupSearchOrderProduct.html
+++ b/PC/html/new/popupSearchOrderProduct.html
@@ -120,6 +120,28 @@ function selectProduct() {
                         </tr>
                     </thead>
                     <tbody>
+                        <tr> 
+                            <td>
+                                <div class="choice_wrap exclusive">
+                                    <input type="checkbox" name=checkItem id="a6"  value="01">
+                                    <label for="a6"></label>
+                                    <input type="hidden" name="productBarcode" value="2310040785576"/>
+                                </div> 
+                            </td>
+                            <td>
+                                <span class="bold">2310040785576</span><br />
+                                [에기르(주)/인터넷 배송]
+                            </td>
+                            <td class="product"><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/goods/50/1783/hot1583034832127.jpg" alt="갤럭시노트10 플러스 전면 풀커버 마그네틱 케이스" width="50" height="50" onerror="this.src='http://image.kyobobook.co.kr/images/no_image.gif';"/></td>
+                            <td class="t_left">
+                                갤럭시노트10 플러스 전면 풀커버 마그네틱 케이스
+                                
+                                <br/><span class="f_orange">색상:노트10 블루-1244:</span>
+                            </td>
+                            <td>1</td>
+                            <td class="t_right">14,800원</td>
+                            <td>배송취소</td>
+                        </tr>
                     </tbody> 
                 </table>
                 <div class="btn_area t_center mgt30">
