--- a/PC/path_now.html
+++ b/PC/path_now.html
@@ -1476,8 +1476,19 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
         <td class="s14"></td>
-        <td class="s16" rowspan="3">세금계산서 신청</td>
+        <td class="s16" rowspan="4">세금계산서 신청</td>
         <td class="s10">세금계산서 신청</td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/txinRequest.html">./html/new/txinRequest.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>>
+        <td class="s10">세금계산서 신청상세</td>
         <td class="s16"></td>
         <td class="s17"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
