--- a/PC/html/new/mypageMain_this.html
+++ b/PC/html/new/mypageMain_this.html
@@ -337,35 +337,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- //lnb -->
                 <!-- sub contents -->
                 <div class="sub_contents">
-                    <h3 class="page_title mgt0">세금계산서 신청내역</h3>
-				    <ul class="list_type02_v2 mgt20 mgb40">
-				        <li>세금계산서 신청 내역 및 발급현황을 확인하실 수 있습니다.</li>
-				    </ul>
-				    <a href="#n" class="btn_type01_v2 f_left mgb20">세금계산서 신청</a>
-				    <table class="bbs_list_v2">
-				        <caption>세금계산서 신청내역 <span>순번, 신청자명, 신청일, 발급일, 처리 상태</span>
-				        </caption>
-				        <colgroup>
-				            <col style="width:20%" />
-				            <col style="width:20%" />
-				            <col style="width:20%" />
-				            <col style="width:20%" />
-				            <col style="width:20%" />
-				        </colgroup>
-				        <thead>
-				            <tr>
-				                <th scope="col" class="fir">순번</th>
-				                <th scope="col">신청자명</th>
-				                <th scope="col">신청일</th>
-				                <th scope="col">발급일</th>
-				                <th scope="col" class="last">처리 상태</th>
-				            </tr>
-				        </thead>
-				        <tbody>
-				            
-				            <tr><td colspan="5" class="no_data">검색된 신청내역이 없습니다.</td></tr>
-				        </tbody>
-				    </table>
+                    <h3 class="page_title mgt0">FAQ 통합검색</h3>
                 </div>
                 <!-- //sub contents -->                
             </div>
