--- a/PC/path_now.html
+++ b/PC/path_now.html
@@ -1348,13 +1348,13 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">5</div></th>
         <td class="s14"></td>
-        <td class="s15" dir="ltr" rowspan="34">마이핫트랙스</td>
+        <td class="s15" dir="ltr" rowspan="35">마이핫트랙스</td>
         <td class="s16" rowspan="1">마이핫트랙스 메인</td>
         <td class="s16" dir="ltr"></td>
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu0.html">./html/new/menu0.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/mypageMain_this.html">./html/new/mypageMain_this.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1362,7 +1362,7 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
         <td class="s14"></td>
-        <td class="s16" dir="ltr" rowspan="13">주문정보</td>
+        <td class="s16" dir="ltr" rowspan="14">주문정보</td>
         <td class="s16" rowspan="5">주문/배송조회</td>
         <td class="s10">주문/배송조회</td>
         <td class="s16"></td>
@@ -1400,7 +1400,7 @@ th.row-headers-background {
         <td class="s10">거래명세서팝업</td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/viewSpecificationOnTransaction.html">./html/new/viewSpecificationOnTransaction.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1411,7 +1411,7 @@ th.row-headers-background {
         <td class="s10">신용카드전표팝업</td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/popupCardinfo.html">./html/new/popupCardinfo.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1491,7 +1491,7 @@ th.row-headers-background {
         <td class="s10">세금계산서 신청상세</td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/txinRequestList.html">./html/new/txinRequestList.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1502,7 +1502,7 @@ th.row-headers-background {
         <td class="s10">사업자등록번호조회팝업</td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/searchTxinRequest.html">./html/new/searchTxinRequest.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1513,7 +1513,7 @@ th.row-headers-background {
         <td class="s10">사업자등록번호등록팝업</td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/createFormTxinRequest.html">./html/new/createFormTxinRequest.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1607,7 +1607,7 @@ th.row-headers-background {
         <td class="s10">좋아요내역보기 좋아요상품</td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_1.html">./html/new/menu1_1.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listWishProduct.html">./html/new/listWishProduct.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1618,7 +1618,7 @@ th.row-headers-background {
         <td class="s16">좋아요내역보기 좋아요브랜드</td>
         <td class="s10"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/newlistWishBrand.html">./html/newlistWishBrand.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1629,7 +1629,7 @@ th.row-headers-background {
         <td class="s16">좋아요내역보기 이럴때좋아요</td>
         <td class="s10"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listWishGood.html">./html/new/listWishGood.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1641,7 +1641,7 @@ th.row-headers-background {
         <td class="s10">내 상품평 관리</td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/commentList.html">./html/new/commentList.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1652,7 +1652,7 @@ th.row-headers-background {
         <td class="s16">상품평작성</td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_2.html">./html/new/menu1_2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/commentPopup.html">./html/new/commentPopup.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1687,7 +1687,7 @@ th.row-headers-background {
         <td class="s10">상품Q&amp;A팝업</td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/questionList_blank.html">./html/new/questionList_blank.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/pop_QNA.html">./html/new/pop_QNA.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
