--- a/PC/html/new/mypageMain_this.html
+++ b/PC/html/new/mypageMain_this.html
@@ -337,7 +337,173 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- //lnb -->
                 <!-- sub contents -->
                 <div class="sub_contents">
-                    <h3 class="page_title mgt0">FAQ 통합검색</h3>
+                    <h3 class="hidden">마이핫트랙스</h3>
+                    <div class="membership_wrap">
+                        <div class="membership_user_wrap">
+                            <div class="membership_user">
+                                <div class="unit_name">홍길동</div>
+                                <div class="unit_membership_level">프렌즈</div>
+                                <a href="javascript:;" class="btn_go_benefit">혜택보기</a>
+                            </div>
+                            <ul class="membership_list">
+                                <li class="items">
+                                    <a href="javascript:;" class="link">
+                                        <div class="text_wrap">
+                                            <span class="unit_go_text">
+                                                통합포인트
+                                            </span>
+                                            <span class="unit_number">
+                                                100,456
+                                            </span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="items">
+                                    <a href="javascript:;" class="link">
+                                        <div class="text_wrap">
+                                            <span class="unit_go_text">
+                                                마일리지
+                                            </span>
+                                            <span class="unit_number">
+                                                59,000
+                                            </span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="items">
+                                    <a href="javascript:;" class="link">
+                                        <div class="text_wrap">
+                                            <span class="unit_go_text">
+                                                온라인 예치금
+                                            </span>
+                                            <span class="unit_number">
+                                                24,000
+                                            </span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="items">
+                                    <a href="javascript:;" class="link">
+                                        <div class="text_wrap">
+                                            <span class="unit_go_text">
+                                                쿠폰/상품권 등록
+                                            </span>
+                                            <span class="unit_number">
+                                                12
+                                            </span>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="my_list_wrap mgt50">                            
+                            <ul class="membership_list">
+                                <li class="items">
+                                    <a href="javascript:;" class="link">
+                                        <div class="text_wrap">
+                                            <span class="unit_go_text">
+                                                주문배송조회
+                                            </span>
+                                            <span class="unit_number">
+                                                100,456
+                                            </span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="items">
+                                    <a href="javascript:;" class="link">
+                                        <div class="text_wrap">
+                                            <span class="unit_go_text">
+                                                주문취소/변경
+                                            </span>
+                                            <span class="unit_number">
+                                                59,000
+                                            </span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="items">
+                                    <a href="javascript:;" class="link">
+                                        <div class="text_wrap">
+                                            <span class="unit_go_text">
+                                                반품/교환신청
+                                            </span>
+                                            <span class="unit_number">
+                                                24,000
+                                            </span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="items">
+                                    <a href="javascript:;" class="link">
+                                        <div class="text_wrap">
+                                            <span class="unit_go_text">
+                                                세금계산서 신청
+                                            </span>
+                                            <span class="unit_number">
+                                                12
+                                            </span>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul class="membership_list col2">
+                                <li class="items">
+                                    <a href="javascript:;" class="link">
+                                        <div class="text_wrap">
+                                            <span class="unit_go_text">
+                                                좋아요
+                                            </span>
+                                            <span>
+                                                내가 좋아요 한 상품/브랜드/이럴 때, 좋아요를 확인하세요. 
+                                            </span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="items">
+                                    <a href="javascript:;" class="link">
+                                        <div class="text_wrap">
+                                            <span class="unit_go_text">
+                                                내 상품평 관리
+                                            </span>
+                                            <span></span>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul class="membership_list col3">
+                                <li class="items">
+                                    <a href="javascript:;" class="link">
+                                        <div class="text_wrap">
+                                            <span class="unit_go_text">
+                                                상품 Q&amp;A 
+                                            </span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="items">
+                                    <a href="javascript:;" class="link">
+                                        <div class="text_wrap">
+                                            <span class="unit_go_text">
+                                                이벤트 참여 내역 
+                                            </span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="items">
+                                    <a href="javascript:;" class="link">
+                                        <div class="text_wrap">
+                                            <span class="unit_go_text">
+                                                SOS 상담
+                                            </span>
+                                            <span>진행중인 상담내역이 있습니다.</span>
+                                            <span>상담내역 바로가기</span>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
                 <!-- //sub contents -->                
             </div>
