--- a/MOBILE/html/new/cs_main.html
+++ b/MOBILE/html/new/cs_main.html
@@ -61,7 +61,8 @@
                 </li>
                 <li>
                     <a href="javascript:;" class="link">
-                        <span>1:1문의</span>
+                        <!-- 210121 수정 -->
+                        <span>SOS상담</span>
                     </a>
                 </li>
             </ul>
