--- a/MOBILE/path_now.html
+++ b/MOBILE/path_now.html
@@ -1056,9 +1056,9 @@ th.row-headers-background {
       <tr style="height:29px;">
         <th id="587364640R52" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">53</div></th>
         <td class="s14" dir="ltr"></td>
-        <td class="s15" dir="ltr" rowspan="7">#Contact<br>
+        <td class="s15" dir="ltr" rowspan="8">#Contact<br>
           (고객센터)</td>
-        <td class="s16"  rowspan="7">고객센터</td>
+        <td class="s16"  rowspan="8">고객센터</td>
         <td class="s9"></td>
         <td class="s9"></td>
         <td class="s16"></td>
@@ -1103,7 +1103,7 @@ th.row-headers-background {
       <tr style="height:29px;">
         <th id="587364640R55" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">56</div></th>
         <td class="s14" dir="ltr"></td>
-        <td class="s16" dir="ltr" rowspan="3">상담문의</td>
+        <td class="s16" dir="ltr" rowspan="5">상담문의</td>
         <td class="s16">상담문의</td>
         <td class="s16"></td>
         <td class="s16"></td>
@@ -1127,7 +1127,17 @@ th.row-headers-background {
         <td class="s16">팝업 - 상품 선택 테이블</td>
         <td class="s16"></td>
         <td class="s16"></td>
-        <td class="s23" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/listone_pop_table.html">http://devm.hottracks.co.kr/html/new/listone_pop_inner.html</a></td>
+        <td class="s23" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/listone_pop_table.html">http://devm.hottracks.co.kr/html/new/listone_pop_table.html</a></td>
+        <td class="s24" dir="ltr">완료</td>
+        <td class="s18"></td>
+      </tr>
+      <tr style="height:29px;">
+        <th id="587364640R55" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">56</div></th>
+        <td class="s14" dir="ltr"></td>
+        <td class="s16">팝업 - 상품 선택 테이블2</td>
+        <td class="s16"></td>
+        <td class="s16"></td>
+        <td class="s23" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/listone_pop_table2.html">http://devm.hottracks.co.kr/html/new/listone_pop_table2.html</a></td>
         <td class="s24" dir="ltr">완료</td>
         <td class="s18"></td>
       </tr>
