--- a/MOBILE/path_now.html
+++ b/MOBILE/path_now.html
@@ -1103,7 +1103,7 @@ th.row-headers-background {
       <tr style="height:29px;">
         <th id="587364640R55" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">56</div></th>
         <td class="s14" dir="ltr"></td>
-        <td class="s16" dir="ltr" rowspan="5">상담문의</td>
+        <td class="s20" dir="ltr" rowspan="4">상담문의</td>
         <td class="s16">상담문의</td>
         <td class="s16"></td>
         <td class="s16"></td>
@@ -1140,6 +1140,76 @@ th.row-headers-background {
         <td class="s23" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/listone_pop_table2.html">http://devm.hottracks.co.kr/html/new/listone_pop_table2.html</a></td>
         <td class="s24" dir="ltr">완료</td>
         <td class="s18"></td>
+      </tr>
+
+      <tr style='height:29px;'>
+        <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;"></div></th>
+       <td class="s14"></td>
+        <td class="s15" dir="ltr" colspan="9">
+        주석 <br>
+            210125 작업부분  <br>
+
+            210125 S : 작업부분 <br>
+            // 210125 E : 작업부분 <br></td>
+        </td>
+      </tr>
+
+      <tr style="height:29px;">
+        <th id="587364640R52" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">53</div></th>
+        <td class="s14" dir="ltr"></td>
+        <td class="s15" dir="ltr" rowspan="5">펀딩</td>
+        <td class="s16"  rowspan="5">펀딩</td>
+        <td class="s16">메인페이지</td>
+        <td class="s9"></td>
+        <td class="s16"></td>
+        <td class="s16"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/main_sidemenu.html">./html/new/main_sidemenu.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"> 이미지팝업</td>
+      </tr>
+        <tr style="height:29px;">
+        <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
+        <td class="s14" dir="ltr"></td>
+        <td class="s16">펀딩상세 - ing </td>
+        <td class="s16"></td>
+        <td class="s16" dir="ltr"></td>
+        <td class="s16"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/memberShip.html">./html/new/memberShip.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+      </tr>
+        <tr style="height:29px;">
+        <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
+        <td class="s14" dir="ltr"></td>
+        <td class="s16">펀딩상세 - end </td>
+        <td class="s16"></td>
+        <td class="s16" dir="ltr"></td>
+        <td class="s16"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/memberShip.html">./html/new/memberShip.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+      </tr>
+        <tr style="height:29px;">
+        <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
+        <td class="s14" dir="ltr"></td>
+        <td class="s16">펀딩상세 - miss </td>
+        <td class="s16"></td>
+        <td class="s16" dir="ltr"></td>
+        <td class="s16"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/memberShip.html">./html/new/memberShip.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+      </tr>
+        <tr style="height:29px;">
+        <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
+        <td class="s14" dir="ltr"></td>
+        <td class="s16">펀딩 - 주문서 </td>
+        <td class="s16"></td>
+        <td class="s16" dir="ltr"></td>
+        <td class="s16"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/funding_orderSheet.html">./html/new/funding_orderSheet.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
       </tr>
       <tr style='height:29px;'>
         <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;"></div></th>
